# Shrinker

./: .gitignore  Makefile  README.md  cabal-haskell.nix.project  cabal.project  ci.nix  default.nix  flake.nix  hie.yaml  liquidity-bridge.cabal  setup.sh  shell.nix  shrinker-test.nix  shrinker.cabal
.github/workflows/: integrate.yaml
ci/: test.sh
nix/: README.md  ci.nix  haskell.nix  sources.json  sources.nix
shrinker-tx/: shrinker-tx.cabal
shrinker-tx/src/Shrink/: PlutusTX.hs
src/: Shrink.hs
src/Shrink/: Names.hs  PlutusTX.hs  PlutusTXTH.hs  ScopeM.hs  Types.hs
src/Shrink/Tactics/: Safe.hs  Tactics.hs  Util.hs
test/: Gen.hs  Spec.hs  Tactics.hs  UnitTests.hs
testing/: shrinker-testing.cabal
testing/spec/: Spec.hs  UnitTests.hs
testing/src/: Gen.hs  Tactics.hs
testing/src/Shrink/Testing/: Gen.hs  Tactics.hs
testing/unitTests/: 12.pluto  13.pluto  14.pluto  6.pluto  7.pluto  8.pluto  cleanForceDelay2.pluto
unit-testing/: shrinker-unit-testing.cabal
unit-testing/spec/: Spec.hs
unit-testing/src/: UnitTests.hs
unit-testing/unitTests/: 10.pluto  11.pluto  15.pluto  16.pluto  17.pluto  5.pluto  9.pluto  cleanForceDelay1.pluto  cleanForceDelay3.pluto  cleanPairs1.pluto  curry1.pluto  curry2.pluto  promoteErrors1.pluto  promoteErrors2.pluto  promoteErrors3.pluto  removeDeadCode2.pluto  removeDeadCode3.pluto  removeDeadCode5.pluto  removeDeadCode6.pluto  removeDeadCode7.pluto  removeDeadCode8.pluto  subs1.pluto
unitTests/: removeDeadCode1.pluto
