cabal-version:      3.0
name:               shrinker
version:            0.1
synopsis:           TODO
description:        TODO
homepage:           https://github.com/Geometer1729/Shrinker
bug-reports:        https://github.com/Geometer1729/Shrinker
license:
license-file:
author:             MLabs
maintainer:         brian@mlabs.city
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md

source-repository head
  type:     git
  location:
    https://github.com/Geometer1729/Shrinker

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries

library 
  import:          common-lang
  exposed-modules:
    Shrink
    Shrink.PlutusTX
    Shrink.PlutusTXTH
    Shrink.Types
    Shrink.Names
    Shrink.Tactics.Safe
    Shrink.Tactics.Tactics
  other-modules:
    Shrink.ScopeM
    Shrink.Tactics.Util
  build-depends:
    , aeson               ^>=1.5.0.0
    , bytestring          ^>=0.10.12.0
    , cardano-prelude
    , containers
    , data-default-class
    , freer-extras
    , freer-simple
    , lens
    , mtl
    , playground-common
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-pab
    , plutus-tx
    , plutus-tx-plugin
    , prettyprinter
    , row-types
    , serialise
    , servant
    , servant-server
    , template-haskell
    , text                ^>=1.2.4.0
    , vector              ^>=0.12.1.2
    , wai
    , warp
  hs-source-dirs:  src

test-suite shrinker-test
  import:         common-lang 
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    Gen 
    Tactics
  --ghc-options:    -fplugin-opt PlutusTx.Plugin:defer-errors
  build-depends:
    , shrinker
    , aeson                        ^>=1.5.0.0
    , base
    , base-compat
    , bytestring                   ^>=0.10.12.0
    , cardano-prelude
    , containers
    , data-default-class
    , either
    , freer-extras
    , freer-simple
    , hedgehog
    , lens
    , playground-common
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-pab
    , plutus-tx
    , plutus-tx-plugin
    , prettyprinter
    , QuickCheck
    , quickcheck-instances
    , row-types
    , serialise
    , servant
    , servant-server
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text                         ^>=1.2.4.0
    , vector                       ^>=0.12.1.2
    , wai
    , warp

  hs-source-dirs: test
