cabal-version:      3.0
name:               shrinker
version:            0.1
synopsis:           TODO
description:        Tools for optimizing uplc script sizes
homepage:           https://github.com/Geometer1729/Shrinker
bug-reports:        https://github.com/Geometer1729/Shrinker
license:
license-file:
author:             MLabs
maintainer:         brian@mlabs.city
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: 
  README.md
data-files:
  ./unitTests/*.pluto

source-repository head
  type:     git
  location:
    https://github.com/Geometer1729/Shrinker

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -Wmissing-import-lists
    -Wmissing-export-lists
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  build-depends:
    , base                   
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries

library 
  import:          common-lang
  exposed-modules:
    Shrink
    Shrink.PlutusTX
    Shrink.PlutusTXTH
    Shrink.Types
    Shrink.Names
    Shrink.Tactics.Safe
    Shrink.Tactics.Tactics
  other-modules:
    Shrink.ScopeM
    Shrink.Tactics.Util
  build-depends:
    , bytestring          ^>=0.10.12.0
    , containers
    , mtl
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , serialise
    , template-haskell
    , text                ^>=1.2.4.0
    , vector              ^>=0.12.1.2
  hs-source-dirs:  src


test-suite shrinker-test
  import:         common-lang 
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    Gen 
    Tactics
    UnitTests
    Paths_shrinker
  build-depends:
    , shrinker
    , base
    , bytestring                   ^>=0.10.12.0
    , directory
    , either
    , filepath
    , hedgehog
    , pluto
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , quickcheck-instances
    , serialise
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text                         ^>=1.2.4.0

  hs-source-dirs: test


