cabal-version:      3.0
name:               shrinker-tx
version:            0.1
synopsis:           TODO
description:        Tools for optimizing plutus-tx scripts
homepage:           https://github.com/Geometer1729/Shrinker
bug-reports:        https://github.com/Geometer1729/Shrinker
license:
license-file:
author:             MLabs
maintainer:         brian@mlabs.city
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.4

source-repository head
  type:     git
  location:
    https://github.com/Geometer1729/Shrinker

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -Wmissing-import-lists
    -Wmissing-export-lists
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  build-depends:
    , base                   
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries

library 
  import: common-lang
  exposed-modules:
    Shrink.PlutusTX
    Shrink.PlutusTXTH
  build-depends:
    , bytestring          ^>=0.10.12.0
    , shrinker
    , plutus-tx
    , serialise
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , template-haskell
  hs-source-dirs: src


