cabal-version:      3.0
name:               shrinker-testing
version:            0.1
synopsis:           TODO
description:        Tools for optimizing uplc script sizes
homepage:           https://github.com/Geometer1729/Shrinker
bug-reports:        https://github.com/Geometer1729/Shrinker
license:
license-file:
author:             MLabs
maintainer:         brian@mlabs.city
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
data-files:
  ./unitTests/*.pluto

source-repository head
  type:     git
  location:
    https://github.com/Geometer1729/Shrinker

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -Wmissing-import-lists
    -Wmissing-export-lists
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  build-depends:
    , base                   
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import: common-lang
  exposed-modules:
    Gen 
    Tactics
  build-depends:
    , shrinker
    , base
    , bytestring                   
    , directory
    , either
    , filepath
    , hedgehog
    , pluto
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , quickcheck-instances
    , serialise
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text                         
  hs-source-dirs: src

test-suite shriker-tests
  import:         common-lang 
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    UnitTests
    Paths_shrinker_testing
  build-depends:
    , shrinker
    , shrinker-testing
    , base
    , bytestring                   
    , directory
    , either
    , filepath
    , hedgehog
    , pluto
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , quickcheck-instances
    , serialise
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text                         

  hs-source-dirs: spec


