cabal-version:      3.0
name:               shrinker-unit-testing
version:            0.1
synopsis:           TODO
description:        Tools for optimizing uplc script sizes
homepage:           https://github.com/Geometer1729/Shrinker
bug-reports:        https://github.com/Geometer1729/Shrinker
license:
license-file:
author:             MLabs
maintainer:         brian@mlabs.city
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
data-files:
  ./unitTests/*.pluto

source-repository head
  type:     git
  location:
    https://github.com/Geometer1729/Shrinker

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -Wmissing-import-lists
    -Wmissing-export-lists
    -Wunused-packages
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  build-depends:
    , base                   
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import: common-lang
  exposed-modules:
    UnitTests
  other-modules:
    Paths_shrinker_unit_testing
  build-depends:
    , base
    , directory
    , filepath
    , hedgehog
    , pluto
    , plutus-core
    , plutus-ledger-api
    , shrinker
    , shrinker-testing
    , tasty
    , tasty-hedgehog
    , text                         
  hs-source-dirs: src

test-suite shriker-unit-testing
  import:         common-lang 
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , base
    , shrinker-unit-testing
    , tasty
    , tasty-hedgehog

  hs-source-dirs: spec


